--- a/data-analyst.html
+++ b/data-analyst.html
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Oxford</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -250,7 +250,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
+<h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -338,7 +338,7 @@
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -346,7 +346,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -354,7 +354,7 @@
 <p><span class="badge badge-light">Guildford  Guildford</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -394,7 +394,7 @@
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cityofwindsor.applytojob.com/apply/WaqfxBiUha/Social-Investment-Data-Research-AnalystSpecial-Projects-Development'>Social Investment Data & Research Analyst/Special Projects Development - City of Windsor - Career Page</a></h5> 
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -466,7 +466,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light">Australia, VIC, Southbank</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
